--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "vaul-svelte": "^0.3.2",
     "vite": "^5.4.8",
     "zod": "^3.23.8"
+  },
+  "dependencies": {
+    "axios": "^1.7.7",
+    "svelte-radix": "^1.1.1"
   }
 }
